# studies

./: .dockerignore  Dockerfile  README.Docker.md  README.md  additional-installation.sh  installation-logger.txt  pandoc-crossref.1  pyproject.toml
.devcontainer/: devcontainer.json
source/: 01_summary.md  02_table_of_contents.md  03_list_of_figures.md  04_abbreviations.md  05_slajd_0.md  06_slajd_1.md  07_slajd_2.md  08_slajd_3.md  09_slajd_4.md  10_slajd_5.md  11_slajd_6.md  12_slajd_7.md  13_slajd_8.md  22_appendix_1.md  24_references.md  metadata.yml  references.bib
style/: preamble.tex  template.tex
